--- a/less/main.less
+++ b/less/main.less
@@ -105,7 +105,7 @@ a {
   }
   h1, h2, h3 {
     margin-bottom: @grid-gutter-width;
-    padding: 0 @grid-gutter-width / 2;
+    //padding: 0 @grid-gutter-width / 2;
     color: @title_grey;
     font-weight: 600;
     text-transform: uppercase;
@@ -245,7 +245,7 @@ a {
 
       }
     }
-    &:nth-child(2n) {
+    &:nth-child(2n-1) {
       background-color: fade(@title_grey, 5%);
     }
     &:hover {
@@ -1101,6 +1101,28 @@ article {
 }
 
 .administration {
+  .nav.nav-tabs {
+    @media (max-width: @screen-xs) {
+      border: 1px solid @gray-lighter;
+      > li {
+        .db;
+        float: none;
+        &.active {
+          a {
+            background-color: @gray-lighter;
+          }
+
+        }
+        > a {
+          margin: 0;
+          padding: 10px @grid-gutter-width/2;
+          border: 0;
+          font-size: @font-size-base;
+
+        }
+      }
+    }
+  }
   &.calendar {
     #calendar-title {
       margin-top: 0;
@@ -1113,15 +1135,68 @@ article {
         content: '';
       }
     }
+    .fc-toolbar {
+      @media (max-width: @screen-xs) {
+        .aleft;
+      }
+      .fc-button-group {
+        @media (max-width: @screen-xs) {
+          float: none;
+        }
+      }
+      .fc-today-button {
+        @media (max-width: @screen-xs) {
+          float: right;
+        }
+      }
+      .fc-left {
+        @media (max-width: @screen-xs) {
+          float: none;
+          margin: 0 0 10px;
+        }
+      }
+      .fc-center {
+        @media (max-width: @screen-sm) {
+          h2 {
+            padding: 0 0 0 0 !important;
+            font-size: @font-size-base;
+          }
+        }
+        @media (max-width: @screen-xs) {
+          float: left;
+          margin: 0 0 10px;
+          h2 {
+            padding: 0 0 0 0 !important;
+            font-size: @font-size-base;
+          }
+        }
+
+      }
+      .fc-right {
+        @media (max-width: @screen-xs) {
+          float: right;
+        }
+      }
+    }
   }
   .listing {
     .item {
+      @media (max-width: @screen-xs) {
+        padding-bottom: 70px;
+      }
       .details {
         width: 130px;
+        @media (max-width: @screen-xs) {
+          width: auto;
+          padding: 0 @grid-gutter-width/2;
+          .text-left;
+        }
       }
       .button {
         text-align: center;
-        min-width: 100px;
+        @media (min-width: @screen-xs) {
+          min-width: 100%;
+        }
         &.more {
           visibility: hidden;
         }
@@ -1149,6 +1224,9 @@ article {
       }
     }
   }
+}
+form {
+
 }
 .text-link-lg {
   font-size: @font-size-large - 2;
@@ -1306,15 +1384,38 @@ article {
     }
   }
 }
-.button {
+.button, .fc button.button {
   .dib;
   padding: 10px 20px;
   //font-weight: bold;
   //.solid_link;
   .solid_link(@link_color, #fff);
+  border: 0;
+  outline: 0;
+  height: auto;
   &.sm {
     font-size: @font-size-small;
     padding: 3px 10px;
+  }
+  &.md {
+    font-size: @font-size-base;
+    padding: 5px 15px;
+  }
+  &.lg {
+    padding: 10px 20px;
+    font-size: @font-size-large;
+  }
+  &.sm-xs {
+    @media (max-width: @screen-xs) {
+      font-size: @font-size-small;
+      padding: 3px 10px;
+    }
+  }
+  &.md-xs {
+    @media (max-width: @screen-xs) {
+      font-size: @font-size-base;
+      padding: 5px 15px;
+    }
   }
   &.default {
     .solid_link(#fff, @text-color);
@@ -1365,6 +1466,16 @@ form {
     font-size: @font-size-small;
     color: darken(@gray-lighter,10%);
   }
+  .form-toggle-group {
+    .dt;
+    > div {
+      vertical-align: middle;
+      .dtc;
+      &:first-child {
+        width: 1%;
+      }
+    }
+  }
 }
 .bn {
   .pr;
@@ -1400,6 +1511,9 @@ form {
   border-bottom: 4px solid fade(#000, 10%);
 }
 
+.w1 {
+  width: 1%;
+}
 .w100 {
   width: 100%;
 }
