--- a/css/main.css
+++ b/css/main.css
@@ -8478,9 +8478,14 @@ section .article_list {
 .page_index .top_wrapper .logo {
   height: 256px;
   margin-bottom: -17px;
-  background-image: url("../images/logo.png");
   background-repeat: no-repeat;
   background-position: center;
+}
+.page_index .top_wrapper .logo.at {
+  background-image: url("../images/logo_at.png");
+}
+.page_index .top_wrapper .logo.ch {
+  background-image: url("../images/logo_ch.png");
 }
 @media (max-width: 1200px) {
   .page_index .top_wrapper .logo {
@@ -9134,17 +9139,8 @@ form .form-toggle-group > div:first-child {
   display: block;
   background-color: #dadada;
 }
-.bn:before {
-  position: absolute;
-  top: calc(50% - .7em);
-  width: 100%;
-  height: 1px;
-  content: 'banner';
-  font-size: 30px;
-  font-weight: bold;
-  text-transform: uppercase;
-  text-align: center;
-  color: #fff;
+.bn > div {
+  margin: 0 auto;
 }
 @media (min-width: 1790px) {
   .bn.right_fixed {
