--- a/css/main.css
+++ b/css/main.css
@@ -7684,14 +7684,40 @@ a:hover {
   min-height: 100%;
   background-color: #fff;
 }
+#main > .container > .row {
+  display: table;
+  width: 100%;
+}
 #main > .container > .row:first-child {
   padding-top: 40px;
 }
 #main > .container > .row:last-child {
   padding-bottom: 50px;
 }
+@media (max-width: 1200px) {
+  #main > .container > .row {
+    display: block;
+    width: auto;
+  }
+}
 #main > .container > .row + .row {
   margin-top: 30px;
+}
+#main > .container > .row > .left {
+  display: table-cell;
+  padding: 0 15px;
+}
+#main > .container > .row > .right {
+  display: table-cell;
+  width: 366px;
+  padding: 0 15px;
+}
+@media (max-width: 1200px) {
+  #main > .container > .row > .left,
+  #main > .container > .row > .right {
+    width: auto;
+    display: block;
+  }
 }
 #main h1,
 #main h2,
@@ -7906,10 +7932,21 @@ a:hover {
   color: #a6aeb2;
   margin-bottom: 15px;
 }
+.listing .item .info address .addr {
+  margin-right: 10px;
+}
 @media (max-width: 480px) {
   .listing .item .info address {
     margin-bottom: 0;
   }
+}
+.listing .item .info address .distance {
+  display: inline-block;
+  font-size: 12px;
+  color: #5ba386;
+}
+.listing .item .info address .distance i {
+  opacity: .5;
 }
 .listing .item .info .footer {
   vertical-align: bottom;
@@ -8389,6 +8426,9 @@ section .article_list {
 .image_gallery a {
   text-decoration: none;
 }
+.image_gallery figure img {
+  width: 100%;
+}
 .image_gallery .carousel-indicators {
   top: 65%;
 }
@@ -8481,11 +8521,13 @@ section .article_list {
   background-repeat: no-repeat;
   background-position: center;
 }
-.page_index .top_wrapper .logo.at {
-  background-image: url("../images/logo_at.png");
-}
-.page_index .top_wrapper .logo.ch {
-  background-image: url("../images/logo_ch.png");
+@media (min-width: 768px) {
+  .page_index .top_wrapper .logo.at {
+    background-image: url("../images/logo_at.png");
+  }
+  .page_index .top_wrapper .logo.ch {
+    background-image: url("../images/logo_ch.png");
+  }
 }
 @media (max-width: 1200px) {
   .page_index .top_wrapper .logo {
@@ -9137,9 +9179,18 @@ form .form-toggle-group > div:first-child {
 .bn {
   position: relative;
   display: block;
-  background-color: #dadada;
+}
+@media (max-width: 480px) {
+  .bn {
+    margin-left: -15px;
+    margin-right: -15px;
+  }
 }
 .bn > div {
+  text-align: center;
+  margin: 0 auto;
+}
+.bn > div > div {
   margin: 0 auto;
 }
 @media (min-width: 1790px) {
