--- a/less/main.less
+++ b/less/main.less
@@ -132,6 +132,12 @@ a {
     color: @title_grey;
     font-weight: 600;
     text-transform: uppercase;
+    @media (max-width: @screen-xs) {
+      margin-left: -@grid-gutter-width/2;
+      margin-right: -@grid-gutter-width/2;
+      padding-left: @grid-gutter-width/2;
+      padding-right: @grid-gutter-width/2;
+    }
     &:first-child {
       margin-top: 0;
     }
@@ -245,6 +251,8 @@ a {
   @media (max-width: @screen-xs) {
     display: block;
     width: auto;
+    margin-left: -@grid-gutter-width/2;
+    margin-right: -@grid-gutter-width/2;
   }
   .item {
     display: table-row;
@@ -305,7 +313,7 @@ a {
       }
       @media (max-width: @screen-xs) {
         width: 100%;
-        padding: 15px 15px 15px;
+        padding: 15px 15px 0;
 
       }
       address {
@@ -330,7 +338,7 @@ a {
         vertical-align: bottom;
         @media (max-width: @screen-xs) {
           .pa;
-          bottom: 25px;
+          bottom: 15px;
         }
       }
       .status {
@@ -367,7 +375,7 @@ a {
         width: 30%;
       }
       @media (max-width: @screen-xs) {
-        margin-bottom: 10px;
+        margin-bottom: 5px;
         padding: 0 @grid-gutter-width/2;
         white-space: nowrap;
       }
@@ -380,7 +388,11 @@ a {
         }
         &.today {
           > div:first-child {
-            color: @green;
+            //color: @green;
+            @media (max-width: @screen-xs) {
+              font-weight: bold;
+              color: @gray-light;
+            }
           }
         }
         @media (max-width: @screen-lg) {
@@ -442,6 +454,7 @@ a {
         .db;
         width: 100%;
         padding: 0 15px 15px 0;
+        margin-top: -10px;
       }
     }
   }
