--- a/css/main.css
+++ b/css/main.css
@@ -8151,11 +8151,19 @@ section .article_list {
   font-size: 13px;
   color: #b4b4b4;
 }
+.company_details_wrapper {
+  margin: -30px -30px 0;
+}
+@media (max-width: 768px) {
+  .company_details_wrapper {
+    margin: 0;
+  }
+}
 .company_details {
   display: table;
+  width: 100%;
   table-layout: fixed;
   border-spacing: 30px;
-  margin: -30px -30px 0;
 }
 .company_details .fa.fa-lock {
   color: #fc5048;
@@ -8166,7 +8174,6 @@ section .article_list {
 @media (max-width: 768px) {
   .company_details {
     border-spacing: 0;
-    margin: 0;
   }
 }
 .company_details > * {
