--- a/css/main.css
+++ b/css/main.css
@@ -7677,6 +7677,46 @@ a:hover {
     margin: 0 auto;
   }
 }
+h1,
+h2,
+h3 {
+  margin-bottom: 30px;
+  color: #777d80;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+@media (max-width: 480px) {
+  h1,
+  h2,
+  h3 {
+    margin-left: -15px;
+    margin-right: -15px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+h1:first-child,
+h2:first-child,
+h3:first-child {
+  margin-top: 0;
+}
+h1.title,
+h2.title,
+h3.title {
+  margin-top: 0;
+  padding-bottom: 20px;
+  border-bottom: 4px solid rgba(0, 0, 0, 0.1);
+}
+h1.nm,
+h2.nm,
+h3.nm {
+  margin: 0;
+}
+h1 + .listing,
+h2 + .listing,
+h3 + .listing {
+  margin-top: -15px;
+}
 #main {
   position: relative;
   z-index: 0;
@@ -7718,46 +7758,6 @@ a:hover {
     width: auto;
     display: block;
   }
-}
-#main h1,
-#main h2,
-#main h3 {
-  margin-bottom: 30px;
-  color: #777d80;
-  font-weight: 600;
-  text-transform: uppercase;
-}
-@media (max-width: 480px) {
-  #main h1,
-  #main h2,
-  #main h3 {
-    margin-left: -15px;
-    margin-right: -15px;
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-}
-#main h1:first-child,
-#main h2:first-child,
-#main h3:first-child {
-  margin-top: 0;
-}
-#main h1.title,
-#main h2.title,
-#main h3.title {
-  margin-top: 0;
-  padding-bottom: 20px;
-  border-bottom: 4px solid rgba(0, 0, 0, 0.1);
-}
-#main h1.nm,
-#main h2.nm,
-#main h3.nm {
-  margin: 0;
-}
-#main h1 + .listing,
-#main h2 + .listing,
-#main h3 + .listing {
-  margin-top: -15px;
 }
 #top_nav {
   position: absolute;
@@ -8906,6 +8906,10 @@ section .article_list {
 .administration.calendar .glyphicon.glyphicon-chevron-down:before {
   content: '';
 }
+.administration.calendar .fc-toolbar {
+  position: relative;
+  overflow: hidden;
+}
 @media (max-width: 480px) {
   .administration.calendar .fc-toolbar {
     text-align: left;
@@ -8923,7 +8927,7 @@ section .article_list {
 }
 @media (max-width: 480px) {
   .administration.calendar .fc-toolbar .fc-left {
-    float: none;
+    display: inline-block;
     margin: 0 0 10px;
   }
 }
@@ -8935,11 +8939,16 @@ section .article_list {
 }
 @media (max-width: 480px) {
   .administration.calendar .fc-toolbar .fc-center {
-    float: left;
-    margin: 0 0 10px;
+    float: none;
+    display: block;
+    margin: 40px 0 10px;
   }
   .administration.calendar .fc-toolbar .fc-center h2 {
+    display: block;
+    width: 100%;
+    margin: 0 !important;
     padding: 0 0 0 0 !important;
+    text-align: center;
     font-size: 15px;
   }
 }
@@ -9489,12 +9498,6 @@ form .form-toggle-group > div:first-child {
 }
 .pl30 {
   padding-left: 30px;
-}
-select.select2 {
-  display: block !important;
-  height: 0;
-  padding: 0;
-  border: 0;
 }
 .select2-drop {
   margin-left: 1px;
