--- a/less/main.less
+++ b/less/main.less
@@ -87,6 +87,35 @@ a {
   }
 
 }
+
+h1, h2, h3 {
+  margin-bottom: @grid-gutter-width;
+  //padding: 0 @grid-gutter-width / 2;
+  color: @title_grey;
+  font-weight: 600;
+  text-transform: uppercase;
+  @media (max-width: @screen-xs) {
+    margin-left: -@grid-gutter-width/2;
+    margin-right: -@grid-gutter-width/2;
+    padding-left: @grid-gutter-width/2;
+    padding-right: @grid-gutter-width/2;
+  }
+  &:first-child {
+    margin-top: 0;
+  }
+  &.title {
+    margin-top: 0;
+    padding-bottom: 20px;
+    .divider_b;
+  }
+  &.nm {
+    margin: 0;
+  }
+  + .listing {
+    margin-top: -15px;
+  }
+
+}
 #main {
   position: relative;
   z-index: 0;
@@ -126,34 +155,7 @@ a {
       }
     }
   }
-  h1, h2, h3 {
-    margin-bottom: @grid-gutter-width;
-    //padding: 0 @grid-gutter-width / 2;
-    color: @title_grey;
-    font-weight: 600;
-    text-transform: uppercase;
-    @media (max-width: @screen-xs) {
-      margin-left: -@grid-gutter-width/2;
-      margin-right: -@grid-gutter-width/2;
-      padding-left: @grid-gutter-width/2;
-      padding-right: @grid-gutter-width/2;
-    }
-    &:first-child {
-      margin-top: 0;
-    }
-    &.title {
-      margin-top: 0;
-      padding-bottom: 20px;
-      .divider_b;
-    }
-    &.nm {
-      margin: 0;
-    }
-    + .listing {
-      margin-top: -15px;
-    }
 
-  }
 }
 #top_nav {
   .pa;
@@ -1254,6 +1256,8 @@ article {
       }
     }
     .fc-toolbar {
+      position: relative;
+      overflow: hidden;
       @media (max-width: @screen-xs) {
         .aleft;
       }
@@ -1269,22 +1273,29 @@ article {
       }
       .fc-left {
         @media (max-width: @screen-xs) {
-          float: none;
+          //float: none;
+          .dib;
           margin: 0 0 10px;
         }
       }
       .fc-center {
         @media (max-width: @screen-sm) {
           h2 {
+
             padding: 0 0 0 0 !important;
             font-size: @font-size-base;
           }
         }
         @media (max-width: @screen-xs) {
-          float: left;
-          margin: 0 0 10px;
+          float: none;
+          .db;
+          margin: 40px 0 10px;
           h2 {
+            .db;
+            width: 100%;
+            margin: 0 !important;
             padding: 0 0 0 0 !important;
+            text-align: center;
             font-size: @font-size-base;
           }
         }
@@ -1798,12 +1809,7 @@ form {
 
   .generate-offset-helpers(@z, @inc, (@l + 1));
 }
-select.select2 {
-  display: block !important;
-  height: 0;
-  padding: 0;
-  border: 0;
-}
+
 .select2-drop {
   margin-left: 1px;
 }
