--- a/css/main.css
+++ b/css/main.css
@@ -7791,11 +7791,32 @@ h3 + .listing {
   top: 20px;
   right: 70px;
 }
+#top_nav .user_name {
+  top: 25px;
+  right: 130px;
+  color: #fff;
+  display: none;
+}
+@media (min-width: 1200px) {
+  #top_nav .user_name {
+    display: block;
+  }
+}
 #top_nav .user_icon {
   top: 15px;
-  right: 50px;
+  right: 60px;
+}
+#top_nav .user_icon.open > a,
+#top_nav .user_icon:hover > a {
+  border: 4px solid #fff;
+}
+#top_nav .user_icon.open > a:after,
+#top_nav .user_icon:hover > a:after {
+  color: #fff;
+  background-color: #333333;
 }
 #top_nav .user_icon > a {
+  position: relative;
   display: block;
   width: 44px;
   height: 44px;
@@ -7805,6 +7826,21 @@ h3 + .listing {
   background-color: #666;
   background-position: center;
   background-size: cover;
+}
+#top_nav .user_icon > a:after {
+  position: absolute;
+  left: 28px;
+  top: 23px;
+  content: '';
+  width: 14px;
+  height: 14px;
+  font-size: 18px;
+  line-height: 14px;
+  text-align: center;
+  border-radius: 50%;
+  color: #fda072;
+  background-color: #fff;
+  font-family: 'FontAwesome';
 }
 #top_nav .search_toggle {
   display: none;
@@ -9239,8 +9275,11 @@ form .form-toggle-group > div:first-child {
 @media (min-width: 1790px) {
   .bn.right_fixed {
     position: fixed;
-    right: 15px;
+    left: calc(100% - 400px);
     width: 300px;
+  }
+  .bn.right_fixed > div {
+    text-align: left;
   }
 }
 .divider_t {
