--- a/less/main.less
+++ b/less/main.less
@@ -187,10 +187,29 @@ h1, h2, h3 {
     top: 20px;
     right: 70px;
   }
+  .user_name {
+    top: 25px;
+    right: 130px;
+    color: #fff;
+    display: none;
+    @media (min-width: @screen-lg) {
+      display: block;
+    }
+  }
   .user_icon {
     top: 15px;
-    right: 50px;
+    right: 60px;
+    &.open, &:hover {
+      > a {
+        border: 4px solid #fff;
+        &:after {
+          color: #fff;
+          background-color: @text-color;
+        }
+      }
+    }
     > a {
+      .pr;
       .db;
       width: 44px;
       height: 44px;
@@ -200,8 +219,22 @@ h1, h2, h3 {
       background-color: #666;
       background-position: center;
       background-size: cover;
+      &:after {
+        .pa;
+        left: 28px;
+        top: 23px;
+        content: '';
+        width: 14px;
+        height: 14px;
+        font-size: 18px;
+        line-height: 14px;
+        text-align: center;
+        border-radius: 50%;
+        color: darken(@lorange, 10%);
+        background-color: #fff;
+        font-family: 'FontAwesome';
+      }
     }
-
   }
 
   .search_toggle {
@@ -1645,8 +1678,12 @@ form {
   &.right_fixed {
     @media (min-width: 1790px) {
       position: fixed;
-      right: 15px;
+      left: calc(~"100% - 400px");
       width: 300px;
+
+      > div {
+        text-align: left;
+      }
     }
 
   }
