--- a/less/main.less
+++ b/less/main.less
@@ -149,6 +149,7 @@ h1, h2, h3 {
       padding: 0 @grid-gutter-width/2;
     }
     > .left, > .right {
+      .vat;
       @media (max-width: @screen-lg) {
         width: auto;
         .db;
