--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700&subset=latin,latin-ext);
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&subset=latin,latin-ext);
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -7680,42 +7680,59 @@ a:hover {
 }
 h1,
 h2,
-h3 {
+h3,
+h4 {
   margin-bottom: 30px;
   color: #777d80;
   font-weight: 600;
   text-transform: uppercase;
 }
-@media (max-width: 480px) {
-  h1,
-  h2,
-  h3 {
-    margin-left: -15px;
-    margin-right: -15px;
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-}
 h1:first-child,
 h2:first-child,
-h3:first-child {
+h3:first-child,
+h4:first-child {
   margin-top: 0;
 }
 h1.title,
 h2.title,
-h3.title {
+h3.title,
+h4.title {
+  font-size: 30px;
   margin-top: 0;
   padding-bottom: 20px;
   border-bottom: 4px solid rgba(0, 0, 0, 0.1);
 }
+@media (max-width: 480px) {
+  h1.title,
+  h2.title,
+  h3.title,
+  h4.title {
+    font-size: 26px;
+    margin-left: -15px;
+    margin-right: -15px;
+    margin-bottom: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
 h1.nm,
 h2.nm,
-h3.nm {
+h3.nm,
+h4.nm {
   margin: 0;
 }
 h1 + .listing,
 h2 + .listing,
-h3 + .listing {
+h3 + .listing,
+h4 + .listing,
+h1 + .bn,
+h2 + .bn,
+h3 + .bn,
+h4 + .bn,
+h1 + .bn:nth-of-type(2),
+h2 + .bn:nth-of-type(2),
+h3 + .bn:nth-of-type(2),
+h4 + .bn:nth-of-type(2) {
   margin-top: -15px;
 }
 #main {
@@ -7731,6 +7748,11 @@ h3 + .listing {
 }
 #main > .container > .row:first-child {
   padding-top: 40px;
+}
+@media (max-width: 768px) {
+  #main > .container > .row:first-child {
+    padding-top: 20px;
+  }
 }
 #main > .container > .row:last-child {
   padding-bottom: 50px;
@@ -8200,6 +8222,11 @@ section .article_list {
     margin: 0;
   }
 }
+@media (max-width: 480px) {
+  .company_details_wrapper {
+    margin: -15px -15px 0;
+  }
+}
 .company_details {
   display: table;
   width: 100%;
@@ -8216,6 +8243,9 @@ section .article_list {
   .company_details {
     border-spacing: 0;
   }
+}
+.company_details * {
+  border-spacing: 0;
 }
 .company_details > * {
   display: table-cell;
@@ -8277,6 +8307,11 @@ section .article_list {
     height: 210px;
   }
 }
+@media (max-width: 768px) {
+  .company_details .infocard .logo {
+    margin-bottom: 15px;
+  }
+}
 .company_details .infocard .logo img {
   margin: auto;
   max-width: calc(100% - 30px);
@@ -8290,9 +8325,27 @@ section .article_list {
     right: 0;
   }
 }
-.company_details .infocard address {
-  font-size: 17px;
+@media (max-width: 480px) {
+  .company_details .infocard .logo img {
+    max-height: 70px;
+    width: auto;
+  }
+}
+.company_details .infocard .bn {
+  display: none;
+  padding: 0;
+}
+@media (max-width: 480px) {
+  .company_details .infocard .bn {
+    display: block;
+  }
+}
+.company_details .infocard address h2 {
   margin: 15px 0;
+  font-size: 17px;
+  font-weight: normal;
+  color: inherit;
+  text-transform: inherit;
 }
 .company_details .infocard .phone {
   font-size: 19px;
@@ -8307,6 +8360,11 @@ section .article_list {
   display: block;
   padding: 14px 30px;
   color: #fff;
+}
+@media (max-width: 480px) {
+  .company_details .infocard .status b {
+    padding: 8px 15px;
+  }
 }
 .company_details .infocard .status.closed b {
   background-color: #fc5048;
@@ -8380,11 +8438,16 @@ section .article_list {
 .company_details .schedule span.open,
 .company_details .schedule span.closed {
   display: block;
+  position: relative;
 }
 .company_details .schedule span.open:before,
 .company_details .schedule span.closed:before {
   display: inline-block;
+  position: absolute;
+  right: 100%;
+  top: 0;
   width: 30px;
+  margin-left: -10px;
   font-family: FontAwesome;
   text-align: center;
 }
@@ -8406,6 +8469,7 @@ section .article_list {
   margin-bottom: 15px;
 }
 .map .map_cont {
+  max-width: 336px;
   border: 1px solid #dadada;
 }
 .map > nav {
@@ -8608,6 +8672,12 @@ section .article_list {
   }
   .page_index .top_wrapper .logo.ch {
     background-image: url("../images/logo_ch.png");
+  }
+  .page_index .top_wrapper .logo.it {
+    background-image: url("../images/logo_it.png");
+  }
+  .page_index .top_wrapper .logo.fr {
+    background-image: url("../images/logo_fr.png");
   }
 }
 @media (max-width: 1200px) {
@@ -9294,8 +9364,12 @@ form .form-toggle-group > div:first-child {
 .bn > div > div {
   margin: 0 auto;
 }
+.bn.right_fixed {
+  display: none;
+}
 @media (min-width: 1790px) {
   .bn.right_fixed {
+    display: block;
     position: fixed;
     left: calc(100% - 400px);
     width: 300px;
@@ -9310,6 +9384,25 @@ form .form-toggle-group > div:first-child {
 }
 .bn.aside_fixed > div {
   text-align: left;
+}
+.visible-xs-min {
+  display: none;
+}
+@media (max-width: 480px) {
+  .visible-xs-min {
+    display: inherit;
+  }
+}
+@media (max-width: 480px) {
+  .hidden-xs-min {
+    display: none !important;
+  }
+}
+@media (max-width: 480px) {
+  .mobile_pads_xs {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 .divider_t {
   border-top: 4px solid rgba(0, 0, 0, 0.1);
