--- a/less/main.less
+++ b/less/main.less
@@ -3,7 +3,7 @@
 @import "vendor/select2-bootstrap-css-bootstrap3/lib/select2-bootstrap.less";
 @import "vendor/bootstrap-toggle-master/css/bootstrap-toggle.less";
 @import "vendor/font-awesome-4.5.0/less/font-awesome.less";
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700&subset=latin,latin-ext);
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&subset=latin,latin-ext);
 
 @main_bk: #4b4848;
 @light_bk: #F0EDED;
@@ -89,30 +89,34 @@ a {
 
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
   margin-bottom: @grid-gutter-width;
   //padding: 0 @grid-gutter-width / 2;
   color: @title_grey;
   font-weight: 600;
   text-transform: uppercase;
-  @media (max-width: @screen-xs) {
-    margin-left: -@grid-gutter-width/2;
-    margin-right: -@grid-gutter-width/2;
-    padding-left: @grid-gutter-width/2;
-    padding-right: @grid-gutter-width/2;
-  }
+
   &:first-child {
     margin-top: 0;
   }
   &.title {
+    font-size: @font-size-h1;
     margin-top: 0;
     padding-bottom: 20px;
     .divider_b;
+    @media (max-width: @screen-xs) {
+      font-size: @font-size-h3;
+      margin-left: -@grid-gutter-width/2;
+      margin-right: -@grid-gutter-width/2;
+      margin-bottom: @grid-gutter-width/2;
+      padding-left: @grid-gutter-width/2;
+      padding-right: @grid-gutter-width/2;
+    }
   }
   &.nm {
     margin: 0;
   }
-  + .listing {
+  + .listing, + .bn, + .bn:nth-of-type(2) {
     margin-top: -15px;
   }
 
@@ -128,6 +132,9 @@ h1, h2, h3 {
     .dt;
     &:first-child {
       padding-top: 40px;
+      @media (max-width: @screen-sm) {
+        padding-top: 20px;
+      }
     }
     &:last-child {
       padding-bottom: 50px;
@@ -555,6 +562,9 @@ article {
   @media (max-width: @screen-sm) {
     margin: 0;
   }
+  @media (max-width: @screen-xs) {
+    margin: -@grid-gutter-width/2 -@grid-gutter-width/2 0;
+  }
 }
 .company_details {
   display: table;
@@ -563,6 +573,9 @@ article {
   border-spacing: @grid-gutter-width;
   .status_icons;
   @media (max-width: @screen-sm) {
+    border-spacing: 0;
+  }
+  * {
     border-spacing: 0;
   }
   > * {
@@ -620,7 +633,13 @@ article {
       @media (min-width: @screen-md) {
         height: 210px;
       }
+      @media (max-width: @screen-sm) {
+        margin-bottom: @grid-gutter-width/2;
+      }
       img {
+        margin: auto;
+        max-width: calc(~"100% - 30px");
+
         @media (min-width: @screen-md) {
           position: absolute;
           top: 0;
@@ -628,13 +647,28 @@ article {
           left: 0;
           right: 0;
         }
-        margin: auto;
-        max-width: calc(~"100% - 30px");
+        @media (max-width: @screen-xs) {
+          max-height: 70px;
+          width: auto;
+        }
+
+      }
+    }
+    .bn {
+      display: none;
+      padding: 0;
+      @media (max-width: @screen-xs) {
+        display: block;
       }
     }
     address {
-      font-size: @font-size-base + 2;
-      margin: 15px 0;
+      h2 {
+        margin: 15px 0;
+        font-size: @font-size-base + 2;
+        font-weight: normal;
+        color: inherit;
+        text-transform: inherit;
+      }
     }
     .phone {
       font-size: @font-size-large;
@@ -648,6 +682,9 @@ article {
         .db;
         padding: 14px 30px;
         color: #fff;
+        @media (max-width: @screen-xs) {
+          padding: 8px 15px;
+        }
       }
       &.closed b {
         background-color: @red;
@@ -707,9 +744,14 @@ article {
     span {
       &.open,&.closed {
         .db;
+        .pr;
         &:before {
           .dib;
+          .pa;
+          right: 100%;
+          top:0;
           width: 30px;
+          margin-left: -10px;
           font-family: FontAwesome;
           .acenter;
         }
@@ -746,6 +788,7 @@ article {
 }
 .map {
   .map_cont {
+    max-width: 336px;
     border: 1px solid @gray-lighter;
   }
   > nav {
@@ -967,6 +1010,12 @@ article {
         }
         &.ch {
           background-image: url("../images/logo_ch.png");
+        }
+        &.it {
+          background-image: url("../images/logo_it.png");
+        }
+        &.fr {
+          background-image: url("../images/logo_fr.png");
         }
       }
       @media (max-width: @screen-lg) {
@@ -1702,7 +1751,9 @@ form {
 //    color: #fff;
 //  }
   &.right_fixed {
+    display: none;
     @media (min-width: 1790px) {
+      display: block;
       position: fixed;
       left: calc(~"100% - 400px");
       width: 300px;
@@ -1721,7 +1772,23 @@ form {
   }
 }
 // utils
-
+.visible-xs-min {
+  display: none;
+  @media (max-width: @screen-xs) {
+    display: inherit;
+  }
+}
+.hidden-xs-min {
+  @media (max-width: @screen-xs) {
+    display: none !important;
+  }
+}
+.mobile_pads_xs {
+  @media (max-width: @screen-xs) {
+    padding-left: @grid-gutter-width/2;
+    padding-right: @grid-gutter-width/2;
+  }
+}
 .divider_t {
   border-top: 4px solid fade(#000, 10%);
 }
